--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 spring.application.name=proyecto-estilounico-2
 
-server.port=8082
+server.port=8080
 server.error.whitelabel.enabled=true
 
 # ===================================
 # CONFIGURACION DE MYSQL
 # ===================================
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/estilounico_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=mysql
+spring.datasource.url=${MYSQL_URL}
+spring.datasource.username=${MYSQLUSER}
+spring.datasource.password=${MYSQLPASSWORD}
 
 # ===================================
 # CONFIGURACION DE JPA/HIBERNATE
