--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.error.whitelabel.enabled=true
 # CONFIGURACION DE MYSQL
 # ===================================
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=${MYSQL_URL}
+spring.datasource.url=${JDBC_DATABASE_URL}
 spring.datasource.username=${MYSQLUSER}
 spring.datasource.password=${MYSQLPASSWORD}
 
