--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=proyecto-estilounico-2
 
-server.port=8080
+server.port=${PORT}
 server.error.whitelabel.enabled=true
 
 # ===================================
