--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,52 +1,32 @@
 spring.application.name=proyecto-estilounico-2
 
-server.port=${PORT}
-server.error.whitelabel.enabled=true
+server.port=${PORT:8080}
 
-# ===================================
 # CONFIGURACION DE MYSQL
-# ===================================
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=${JDBC_DATABASE_URL}
-spring.datasource.username=${MYSQLUSER}
-spring.datasource.password=${MYSQLPASSWORD}
+spring.datasource.url=${JDBC_DATABASE_URL:jdbc:mysql://localhost:3306/estilounico_db?useSSL=false&serverTimezone=UTC}
+spring.datasource.username=${MYSQLUSER:root}
+spring.datasource.password=${MYSQLPASSWORD:adminsql}
 
-# ===================================
-# CONFIGURACION DE JPA/HIBERNATE
-# ===================================
+# Pool de conexiones
+spring.datasource.hikari.maximum-pool-size=3
+spring.datasource.hikari.minimum-idle=1
+
+# JPA
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.open-in-view=false
 
-# ===================================
-# CONFIGURACION DE THYMELEAF
-# ===================================
-spring.thymeleaf.cache=false
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
-spring.thymeleaf.mode=HTML
-spring.thymeleaf.encoding=UTF-8
+# Thymeleaf
+spring.thymeleaf.cache=true
 
+# Logging
+logging.level.root=WARN
+logging.level.com.estilounico=INFO
 
-# ===================================
-# CONFIGURACION DE LOGGING
-# ===================================
-logging.level.root=INFO
-logging.level.com.estilounico=DEBUG
-logging.level.org.springframework.web=DEBUG
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-
-# ===================================
-# CONFIGURACION DE ARCHIVOS
-# ===================================
-spring.servlet.multipart.enabled=true
+# Archivos
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
 
-# ===================================
-# CONFIGURACION DE MENSAJES
-# ===================================
-spring.messages.basename=messages
-spring.messages.encoding=UTF-8
+# Optimizaciones
+spring.main.lazy-initialization=true
+spring.jmx.enabled=false
