--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=${PORT:8080}
 
 # CONFIGURACION DE MYSQL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=${JDBC_DATABASE_URL:jdbc:mysql://localhost:3306/estilounico_db?useSSL=false&serverTimezone=UTC}
+spring.datasource.url=${JDBC_DATABASE_URL:jdbc:mysql://localhost:3306/estilounico_db?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC}
 spring.datasource.username=${MYSQLUSER:root}
 spring.datasource.password=${MYSQLPASSWORD:adminsql}
 
@@ -15,9 +15,6 @@ spring.datasource.hikari.minimum-idle=1
 # JPA
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.open-in-view=false
-
-# Thymeleaf
-spring.thymeleaf.cache=true
 
 # Logging
 logging.level.root=WARN
